# heimdall

./: .gitignore  README.md  TEST_INSTRUCTIONS.md  config-openrouter.yaml  config-sample.yaml  pyproject.toml
recipes/: home-server.md  ssh-ftp.md
src/heimdall/: __init__.py  agent.py  cli.py  config.py  hooks.py  models.py  recipe_parser.py
src/heimdall/daemon/: __init__.py  server.py
src/heimdall/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openrouter_client.py
src/heimdall/modules/: __init__.py  discovery.py  guard.py  recipes.py
src/heimdall/tools/: __init__.py  _common.py  package_manager.py  service_manager.py
tests/: test_agents.py  test_cli.py  test_hooks.py  test_llm_factory.py  test_models.py  test_recipe_parsing.py
